[gd_scene load_steps=14 format=3 uid="uid://cnxv5jgoj4kw2"]

[ext_resource type="Script" path="res://game/entities/gameplay/e_trampoline.gd" id="1_ct15j"]
[ext_resource type="PackedScene" uid="uid://yx4evyedjcbm" path="res://game/assets/props/trampoline/trampoline.gltf" id="2_wb5fw"]
[ext_resource type="Script" path="res://game/lib/component_area.gd" id="3_1sf6e"]
[ext_resource type="Script" path="res://game/components/gameplay/c_trampoline.gd" id="3_kdqtm"]
[ext_resource type="PackedScene" uid="uid://04sixpunsk8a" path="res://game/lib/locator_3d.tscn" id="3_xexxj"]
[ext_resource type="Script" path="res://game/components/gameplay/c_transform.gd" id="4_sxfcn"]
[ext_resource type="Script" path="res://addons/gecs/component.gd" id="4_x6f6h"]
[ext_resource type="Script" path="res://game/actions/component_area_actions/component_area_action.gd" id="7_qrgsl"]
[ext_resource type="Script" path="res://game/actions/component_area_actions/aa_enter_trampoline.gd" id="8_lvqqh"]

[sub_resource type="Resource" id="Resource_5y3bq"]
script = ExtResource("3_kdqtm")

[sub_resource type="Resource" id="Resource_g7kcj"]
script = ExtResource("4_sxfcn")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[sub_resource type="Resource" id="Resource_eimkc"]
script = ExtResource("8_lvqqh")
meta = {
"description": "This triggers from Enter Trampoline Area on Trampoline",
"name": "Enter Trampoline Action"
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hqi1i"]
radius = 2.5781

[node name="ETrampoline" type="Node3D"]
script = ExtResource("1_ct15j")
component_resources = Array[ExtResource("4_x6f6h")]([SubResource("Resource_5y3bq"), SubResource("Resource_g7kcj")])

[node name="BounceCenter" parent="." instance=ExtResource("3_xexxj")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.0505, 0)

[node name="ExitRight" parent="." instance=ExtResource("3_xexxj")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="ExitTop" parent="." instance=ExtResource("3_xexxj")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="ExitLeft" parent="." instance=ExtResource("3_xexxj")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="ExitBottom" parent="." instance=ExtResource("3_xexxj")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="trampoline2" parent="." groups=["navigation_mesh_source_group"] instance=ExtResource("2_wb5fw")]

[node name="EnterTrampolineArea" type="Area3D" parent="." node_paths=PackedStringArray("parent")]
collision_layer = 0
collision_mask = 8
script = ExtResource("3_1sf6e")
parent = NodePath("..")
actions = Array[ExtResource("7_qrgsl")]([SubResource("Resource_eimkc")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterTrampolineArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0167617, 0.579913, -0.0668545)
shape = SubResource("CylinderShape3D_hqi1i")

[editable path="trampoline2"]
